repo card almost done need to add updated date and to solve spacing issues

--- a/src/index.css
+++ b/src/index.css
@@ -2,5 +2,8 @@
 
 body{
   font-family: sans-serif;
-  background-color: #FAF5F7;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
+  background-color: #fafafa;
 }
